// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-llMclw {
    background: none;
    border: none;
    cursor: pointer;
    flex-shrink: 0;
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
    color: var(--colors-tonal500);
  }

  .c-llMclw[data-state="active"] {
    font-weight: 600;
    letter-spacing: -0.005em;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-llMclw[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-llMclw:not([data-disabled]):active,
  .c-llMclw:not([data-disabled]):hover,
  .c-llMclw:not([data-disabled]):focus-visible {
    color: var(--colors-accent);
  }

  .c-llMclw:not([data-disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }
}

  .c-gnshMT {
    flex-shrink: 0;
    display: flex;
    width: 100%;
    overflow: visible;
    overflow-x: auto;
  }

  .c-gnshMT::-webkit-scrollbar {
    display: none;
  }

  .c-gnshMT {
    scrollbar-width: none;
    border-bottom: 1px solid var(--colors-separator);
  }
}

  .c-cWMaKf {
    flex-grow: 1;
    font-family: var(--fonts-body);
  }
}

<div>
  <div
    class="PJLV"
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="c-gnshMT"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <span
        aria-controls="radix-3-content-tab1"
        aria-selected="true"
        class="c-llMclw"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-3-trigger-tab1"
        role="tab"
        tabindex="-1"
        theme="t-kLRDWO"
        type="button"
      >
        Trigger 1
      </span>
      <span
        aria-controls="radix-3-content-tab2"
        aria-selected="false"
        class="c-llMclw"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-3-trigger-tab2"
        role="tab"
        tabindex="-1"
        theme="t-kLRDWO"
        type="button"
      >
        Trigger 2
      </span>
      <span
        aria-controls="radix-3-content-tab3"
        aria-selected="false"
        class="c-fIXJvv c-fIXJvv-bndJoy-size-sm c-bWpZXV"
        data-disabled=""
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        disabled=""
        id="radix-3-trigger-tab3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Trigger 3
      </span>
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab1"
      class="c-cWMaKf"
      data-orientation="horizontal"
      data-state="active"
      id="radix-3-content-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab2"
      class="c-cWMaKf"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-3-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-llMclw {
    background: none;
    border: none;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    height: var(--sizes-5);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
    color: var(--colors-tonal500);
  }

  .c-llMclw[data-state="active"] {
    font-weight: 600;
    letter-spacing: -0.005em;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-llMclw[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-llMclw:not([data-disabled]):active,
  .c-llMclw:not([data-disabled]):hover,
  .c-llMclw:not([data-disabled]):focus-visible {
    color: var(--colors-accent);
  }

  .c-llMclw:not([data-disabled]):focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-gnshMT {
    flex-shrink: 0;
    display: flex;
    width: 100%;
    overflow: visible;
    overflow-x: auto;
  }

  .c-gnshMT::-webkit-scrollbar {
    display: none;
  }

  .c-gnshMT {
    scrollbar-width: none;
    border-bottom: 1px solid var(--colors-separator);
  }

  .c-cWMaKf {
    flex-grow: 1;
    font-family: var(--fonts-body);
  }

  .c-dhzjXW {
    display: flex;
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }
}

<div>
  <div
    class="PJLV"
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <div
        aria-orientation="horizontal"
        class="c-gnshMT"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-5-content-tab1"
          aria-selected="true"
          class="c-llMclw"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-5-trigger-tab1"
          role="tab"
          tabindex="-1"
          theme="t-kLRDWO"
          type="button"
        >
          Trigger 1 which is going to be long
        </button>
        <button
          aria-controls="radix-5-content-tab2"
          aria-selected="false"
          class="c-llMclw"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-5-trigger-tab2"
          role="tab"
          tabindex="-1"
          theme="t-kLRDWO"
          type="button"
        >
          Trigger 2 which is going to be even longer
        </button>
      </div>
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab1"
      class="c-cWMaKf"
      data-orientation="horizontal"
      data-state="active"
      id="radix-5-content-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab2"
      class="c-cWMaKf"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-3-content-tab3"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
